# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-triagesieve_env"
version = "0.1.0"
description = "TriageSieve Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "litellm>=0.1.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m triagesieve_env.server.app
server = "triagesieve_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["triagesieve_env", "triagesieve_env.server", "triagesieve_env.baseline", "triagesieve_env.tests", "triagesieve_env.scripts", "triagesieve_env.data"]
package-dir = { "triagesieve_env" = ".", "triagesieve_env.server" = "server", "triagesieve_env.baseline" = "baseline", "triagesieve_env.tests" = "tests", "triagesieve_env.scripts" = "scripts", "triagesieve_env.data" = "data" }

[tool.setuptools.package-data]
"triagesieve_env" = ["data/*.json", "data/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that call external APIs (deselect with '-m not slow')",
]